2022-09-02T02:09:48Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2976204212
* notice: last 14d: unq all: 19 132
* notice: prev accum: outdated-unq outdated-all / unq all: 0 0 / 26 129
* notice: next accum: outdated-unq outdated-all / unq all: 0 0 / 28 132
* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -0 -0 / +6 +11 -0 -0 / 6 11
* notice: removed / changed dates: [] / [2022-09-01]

2022-09-01T16:28:20Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2973321995
* notice: last 14d: unq all: 17 129
* notice: prev accum: outdated-unq outdated-all / unq all: 0 0 / 23 122
* notice: next accum: outdated-unq outdated-all / unq all: 0 0 / 26 129
* notice: prev exec diff / last date diff / accum: unq all: +3 +7 -0 -0 / +4 +8 -0 -0 / 4 8
* notice: removed / changed dates: [] / [2022-09-01]

2022-09-01T08:27:42Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2970074098
* notice: last 14d: unq all: 17 122
* notice: prev accum: outdated-unq outdated-all / unq all: 0 0 / 22 121
* notice: next accum: outdated-unq outdated-all / unq all: 0 0 / 23 122
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-01]

2022-09-01T02:03:55Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2968362552
* notice: last 14d: unq all: 17 121
* notice: prev accum: outdated-unq outdated-all / unq all: 0 0 / 21 120
* notice: next accum: outdated-unq outdated-all / unq all: 0 0 / 22 121
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +8 +14 -0 -0 / 8 14
* notice: removed / changed dates: [] / [2022-08-31]

2022-08-31T16:28:27Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2965477265
* notice: last 14d: unq all: 16 120