@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-02T02:09:48Z",
+  "timestamp" : "2022-09-02T08:25:49Z",
   "count_outdated" : 0,
   "uniques_outdated" : 0,
-  "count" : 132,
-  "uniques" : 28,
+  "count" : 133,
+  "uniques" : 29,
   "clones" : [
     {
       "timestamp": "2022-08-29T00:00:00Z",
@@ -32,6 +32,13 @@
       "count_minmax": [ 1, 11 ],
       "uniques": 6,
       "uniques_minmax": [ 1, 6 ]
+    },
+    {
+      "timestamp": "2022-09-02T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
