@@ -1,5 +1,5 @@
 {
-  "count": 132,
+  "count": 133,
   "uniques": 19,
   "clones": [
     {
@@ -21,6 +21,11 @@
       "timestamp": "2022-09-01T00:00:00Z",
       "count": 11,
       "uniques": 6
+    },
+    {
+      "timestamp": "2022-09-02T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
