@@ -1,3 +1,11 @@
+2022-09-02T08:25:49Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2977659191
+* notice: last 14d: unq all: 19 133
+* notice: prev accum: outdated-unq outdated-all / unq all: 0 0 / 28 132
+* notice: next accum: outdated-unq outdated-all / unq all: 0 0 / 29 133
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-09-02]
+
 2022-09-02T02:09:48Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2976204212
 * notice: last 14d: unq all: 19 132
